# dynamic-extension

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
benchmarks/: alex_rq_bench.cpp  bench.h  bigann_sample.cpp  btree_insert_query_tput.cpp  btree_irs_bench.cpp  btree_rq_bench.cpp  cedar_trie.cpp  ealex_rq_bench.cpp  hat_trie.cpp  insert_query_tput.cpp  insert_query_tput_serial.cpp  insert_tail_latency.cpp  insertion_tput.cpp  irs_bench.cpp  isam_irs_bench.cpp  louds_insertion_tput.cpp  mtree_knn_bench.cpp  pgm_bench.cpp  pgm_pl_bench.cpp  pgm_rq_bench.cpp  poplar_trie.cpp  query_workload_bench.cpp  reconstruction_interference.cpp  sampling_tput.cpp  static_dynamic_comp.cpp  string_insertion_tput.cpp  test.cpp  triespline_rq_bench.cpp  ts_bench.cpp  ts_bsm_bench.cpp  ts_mdsp_bench.cpp  upgm_pl_bench.cpp  upgm_rq_bench.cpp  vptree_bench.cpp  vptree_knn_bench.cpp  watermark_testing.cpp  watermark_testing_knn.cpp
benchmarks/include/: bench.h  bench_utility.h  benchmark_types.h  btree-util.h  data-proc.h  file_util.h  standalone_utility.h  standard_benchmarks.h  triespline_bsm.h  vptree_bsm.h
benchmarks/old-bench/: alias_wss_bench.cpp  btree_irs_bench.cpp  isam_rq_bench.cpp  triespline_rq_bench.cpp  upgm_rq_bench.cpp  vptree_knn_bench.cpp
benchmarks/old-bench/include/: bench.h  bench_utility.h  standalone_utility.h
benchmarks/vldb/: alex_bench.cpp  btree_bench.cpp  btree_thread_scaling_bench.cpp  dynamic_pgm_bench.cpp  fst_bench.cpp  fst_bsm_bench.cpp  irs_bench.cpp  mtree_bench.cpp  mtree_bench_alt.cpp  pgm_bench.cpp  thread_scaling_bench.cpp  ts_bench.cpp  ts_bsm_bench.cpp  ts_mdsp_bench.cpp  ts_parmsweep.cpp  vptree_bench.cpp  vptree_bench_alt.cpp  vptree_bsm_bench.cpp  vptree_bsm_bench_alt.cpp  vptree_parmsweep.cpp
include/ds/: Alias.h  BTree.h  BitArray.h  BloomFilter.h  PriorityQueue.h
include/framework/: DynamicExtension.h  ExtensionStructure.h  InternalLevel.h  MutableBuffer.h  QueryInterface.h  QueryRequirements.h  RecordInterface.h  Scheduler.h  ShardInterface.h  ShardRequirements.h
include/framework/interface/: Query.h  Record.h  Scheduler.h  Shard.h
include/framework/scheduling/: Epoch.h  FIFOScheduler.h  Scheduler.h  SerialScheduler.h  Task.h  statistics.h
include/framework/structure/: BufferView.h  ExtensionStructure.h  InternalLevel.h  MutableBuffer.h
include/framework/util/: Configuration.h
include/io/: PagedFile.h
include/query/: irs.h  knn.h  pointlookup.h  rangecount.h  rangequery.h  wirs.h  wss.h
include/shard/: Alex.h  Alias.h  AugBTree.h  FSTrie.h  ISAMTree.h  LoudsPatricia.h  MemISAM.h  PGM.h  TrieSpline.h  VPTree.h  WIRS.h  WSS.h
include/util/: Cursor.h  Record.h  SortedMerge.h  base.h  bf_config.h  hash.h  internal_record.h  record.h  timer.h  types.h
tests/: alias_tests.cpp  augbtree_tests.cpp  de_bsm_tag.cpp  de_bsm_tomb.cpp  de_cc_isam_level.cpp  de_level_concurrent.cpp  de_level_tag.cpp  de_level_tomb.cpp  de_tier_concurrent.cpp  de_tier_tag.cpp  de_tier_tomb.cpp  dynamic_extension_tests.cpp  dynamic_extension_tests.inc  fst_tests.cpp  internal_level_tests.cpp  irs_tests.cpp  louds_tests.cpp  memisam_tests.cpp  mutable_buffer_tests.cpp  pagedfile_tests.cpp  pgm_tests.cpp  rangecount_tests.cpp  rangequery_tests.cpp  testing.h  triespline_debug.cpp  triespline_tests.cpp  vptree_tests.cpp  wirs_tests.cpp  wss_tests.cpp
tests/data/: kjv-sorted.txt  kjv-wordlist.txt  summa-sorted.txt  summa-wordlist.txt
tests/include/: concurrent_extension.h  dynamic_extension.h  irs.h  pointlookup.h  rangecount.h  rangequery.h  shard_standard.h  shard_string.h  testing.h  wirs.h  wss.h
